- Post only page could be made without any programmings.
- Bridge for JavaScript Components is added. The HTML editor tinyMCE and original File Uploader are supported.
- Started CI!
===========================================================================

Ver.3.11 (in development)
- The code editor "codemirror" is supported. See Sample_webpage folder.
- [SECURITY FIX] Check operators in settings, and quote any field names for PDO.

Ver.3.10 (2013/11/2)
- Support FileMaker's portal objects (by specifying 'relation' => array('portal' => true) ).
- New sample (Master-Detail Style Page for FileMaker's portal access version) is added.
- Modify FX.php for FileMaker Server to enable the "fmalt" and retrieve the record id on portal objects.
- Modify FX.php for FileMaker Server to disable the surrogate input patch when using FileMaker Server 12
  (by specifying $dbDataType = 'FMPro12' in params.php).
- Check availability of BC Math functions of PHP. INTER-Mediator requires BC Math for authentication.
- Check the compatibility mode of Internet Explorer on checking browsers.
- [SECURITY FIX] Database connection information (the 'password' key etc.) in a definition file doesn't send to clients.
- [SECURITY FIX] Fix SQL injection issue when using PDO.
- [INFO] INTER-Mediator requires FileMaker Server 10 or later, OS X v10.6 or later if using FileMaker Server.
- [BUG FIX] Fix DataConverter_FMDateTime and DataConverter_MySQLDateTime's issue on Windows.
- [BUG FIX] The substr function in IE8 can't handle a negative parameter, fix it on the numberFormat method.
- [BUG FIX] The sample List-Detail Style Navigation for FileMaker Server had some wrong links to MySQL samples.
- [BUG FIX] The sample List-Detail Style Navigation for FileMaker Server had some wrong definitions to refer images.
- [BUG FIX] The sample Authorized Chat had q wrong field name.
- [BUG FIX] The sample Search Page had inappropriate JavaScript codes.