@@ -68,6 +68,8 @@ Ver.4.0 (any date)=========================================================
 
 Ver.3.11 (in development)
 - The code editor "codemirror" is supported. See Sample_webpage folder.
+- INTERMediator.pagedSize can be changeable when specifying 'records' key and 'maxrecords' key in a definition file
+  (for example: array('records' => 10, 'maxrecords' => 10) ).
 - [SECURITY FIX] Check operators in settings, and quote any field names for PDO.
 
 Ver.3.10 (2013/11/2)
